src/test/resources/syntax_errors/lex_error__unmatched_chars_in_incr.notc
void f(int n) {
    int m = n[++];
}
